--- a/com.top_logic.model.search/src/main/webapp/style/modelSearch.css
+++ b/com.top_logic.model.search/src/main/webapp/style/modelSearch.css
@@ -85,17 +85,17 @@ div.ace_tooltip>code.inlineCode {
 	min-width: max-content;
 }
 
-.modelBasedSearch .cTextInput.cannot-edit {
+.modelBasedSearch .tl-text-input.cannot-edit {
 	min-width: calc(2 * var(--spacing-03) + 2ch);
 }
 
-.modelBasedSearch .cTextInput {
+.modelBasedSearch .tl-text-input {
 	text-align: center;
 	min-width: calc(2 * var(--spacing-03) + 4.5ch);
 	max-width: calc(2 * var(--spacing-03) + 21.5ch);
 }
 
-.modelBasedSearch .cTextInput:not(.searchIrrelevant) input.is-input:not([size]) {
+.modelBasedSearch .tl-text-input:not(.searchIrrelevant) input.is-input:not([size]) {
 	width: 100vw;
 }
 
