--- a/com.top_logic.themes.core/src/main/webapp/style/coreCondensed.css
+++ b/com.top_logic.themes.core/src/main/webapp/style/coreCondensed.css
@@ -12,15 +12,15 @@
 	height: 1.75rem;
 }
 
-.cDateInput input {
+.tl-date-input input {
     width: 6rem;
 }
 
-.cTimeInput input {
+.tl-time-input input {
     width: 3.5rem;
 }
 
-.quickSearch .cTextInput input {
+.quickSearch .tl-text-input input {
 	height: 2rem;
 }
 
