Ticket #28474: Style changes.
* The anchor hover state should not render an underline. Set margin top
and bottom to 0 for checkboxes and radio elements, because the default
browser sets margin top and bottom.

--- a/com.top_logic.themes.core/src/main/webapp/style/coreButtons.css
+++ b/com.top_logic.themes.core/src/main/webapp/style/coreButtons.css
@@ -653,6 +653,7 @@ a.fChoose:hover,
 .dfListAdd .cButton a:hover,
 .cButton.dfRemove a:hover {
 	color: var(--button-fg, var(--icon-primary));
+	text-decoration: none;
 }
 
 .cButton.fToggle a:hover {
