--- a/com.top_logic.themes.core/src/main/webapp/style/form.css
+++ b/com.top_logic.themes.core/src/main/webapp/style/form.css
@@ -2101,8 +2101,7 @@ img.type-image {
 .is-checkbox,
 a.tristate, 
 input.tristate {
-	margin-left: var(--spacing-01);
-	margin-right: var(--spacing-01);
+	margin: 0 var(--spacing-01);
 }
 
 .rf_firstColumn .tBoolean > .type-image,
