Ticket #28474: CSS class name changes to the BEM syntax.

--- a/com.top_logic.model.search/src/main/webapp/style/modelSearch.css
+++ b/com.top_logic.model.search/src/main/webapp/style/modelSearch.css
@@ -99,6 +99,6 @@ div.ace_tooltip>code.inlineCode {
 	width: 100vw;
 }
 
-.modelBasedSearch .cPopupSelect.active {
+.modelBasedSearch .tl-popup-select.active {
 	width: unset;
 }
