--- a/com.top_logic/src/main/java/com/top_logic/layout/renderers/BUTTON_COMPONENT_BUTTON_TEMPLATE.template.html
+++ b/com.top_logic/src/main/java/com/top_logic/layout/renderers/BUTTON_COMPONENT_BUTTON_TEMPLATE.template.html
@@ -2,7 +2,7 @@
 	data-tooltip="{tooltip}" onclick="{onclick}"
 >
 	{commandImage}
-	<span class="cmdLabel">
+	<span class="tl-cmd-button__label">
 		{label}
 	</span>
 </a>
