--- a/com.top_logic/src/main/webapp/jsp/administration/maintenance/benchmark/mainStyle.css
+++ b/com.top_logic/src/main/webapp/jsp/administration/maintenance/benchmark/mainStyle.css
@@ -339,7 +339,7 @@ td.cmdButtonCell {
 	/* need this empty style otherwise the default(s) kills us ? */
 }
 
-a.cmdButton {
+a.tl-cmd-button {
 	font-family:Arial,Helvetica,sans-serif;
 	font-size:9pt;
 	font-weight:bold;
@@ -353,8 +353,8 @@ a.cmdButton {
 	padding:0.2em;
 }
 
-/* a.cmdButton:hover	does not work when onMouseOver is used  */
-a.cmdButton:hover {	
+/* a.tl-cmd-button:hover	does not work when onMouseOver is used  */
+a.tl-cmd-button:hover {	
 	font-family:Arial,Helvetica,sans-serif;
 	font-size:9pt;
 	font-weight:bold;
@@ -368,7 +368,7 @@ a.cmdButton:hover {
 	padding:0.2em;
 }
 
-a.cmdButtonDisabled
+a.tl-cmd-button--disabled
 {
 	font-family:Arial,Helvetica,sans-serif;
 	font-size:9pt;
@@ -382,7 +382,7 @@ a.cmdButtonDisabled
 	padding:0.2em;
 }
 
-img.cmdImg {
+img.tl-cmd-button__img {
 	border:no-border;
 }
 
