Ticket #28565: Added CCS rule to flush right cell content of controls.

--- a/com.top_logic.themes.core/src/main/webapp/style/tables.css
+++ b/com.top_logic.themes.core/src/main/webapp/style/tables.css
@@ -80,6 +80,10 @@ td.tblRight {
 	text-align: right;
 }
 
+td.tblRight .is-control {
+	justify-content: safe flex-end;
+}
+
 td.tblRight .tl-table__cell-container,
 td.tblRight .tl-table__cell-container > * {
 /* 	justify-content: safe flex-end; */
