Ticket #25918: Visually mark selected nodes.

--- a/com.top_logic.graphic.blocks.server/src/main/webapp/style/tl-blocks.css
+++ b/com.top_logic.graphic.blocks.server/src/main/webapp/style/tl-blocks.css
@@ -27,3 +27,11 @@ path.tlbConnector {
 	stroke-width: 3;
 	stroke: #ffe635; 
 }
+
+.tlSelectionMarker {
+	display: none;
+}
+
+.tlSelected .tlSelectionMarker {
+	display: initial;
+}
