--- a/com.top_logic.model.search/src/main/webapp/WEB-INF/layouts/mainTabbar.layout.overlay.xml
+++ b/com.top_logic.model.search/src/main/webapp/WEB-INF/layouts/mainTabbar.layout.overlay.xml
@@ -7,4 +7,7 @@
 			resource="com.top_logic.model.search/search/modelSearch.layout.xml"
 		/>
 	</components>
+	<dialogs>
+		<layout-reference resource="admin/myLatestChanges/dialog.layout.xml"/>
+	</dialogs>
 </arguments>
